--- a/style.css
+++ b/style.css
@@ -14,3 +14,46 @@ button{
     padding: 5px 10px;
     cursor: pointer;
 }
+
+.box{
+    display: flex;
+}
+
+.box div{
+    border: solid 1px black;
+}
+
+
+.grid-container{
+    display: grid;
+    grid-template-rows: 100px 100px;
+    grid-template-columns: 100px 100px;
+    grid-gap: 1px;
+}
+
+.grid-item1 {
+    background: rgb(212, 212, 212);
+    border: black1px solid;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.grid-item2 {
+    background: rgb(212, 212, 212);
+    border: black1px solid;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+
+.grid-item3 {
+    background: rgb(212, 212, 212);
+    border: black1px solid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
