--- a/style.css
+++ b/style.css
@@ -1,26 +1,40 @@
 *{
-    color: rgb(0, 0, 255); /*a comment */
+    color: rgb(173, 59, 88); /*a comment */
     margin: 10px;
     font: 40 px Tahoma;
     background-color: rgb(234, 177, 177);
     text-align: center;
 
+
 }
 
 button{
-    background-color: rgb(255, 129, 226);
-    border: 2px solid black;
+    background-color: rgb(255, 181, 200);
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding: 5px 10px;
-    cursor: pointer;
+    font-size: 20px;
 }
 
 .box{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 .box div{
-    border: solid 1px black;
+    border: solid 2px lightblue;
+    padding: 5px 100px;
+    font-size: 20px;
+    background-color: rgb(255, 181, 200);
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin: 10px;
+    font: 40 px Arial;
+
 }
 
 
@@ -32,16 +46,17 @@ button{
 }
 
 .grid-item1 {
-    background: rgb(212, 212, 212);
+    background: rgb(176, 176, 176);
     border: black1px solid;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+
 }
 
 .grid-item2 {
-    background: rgb(212, 212, 212);
+    background: rgb(255, 228, 228);
     border: black1px solid;
     grid-column-start: 3;
     grid-column-end: 3;
@@ -50,10 +65,10 @@ button{
 }
 
 .grid-item3 {
-    background: rgb(212, 212, 212);
+    background: rgb(255, 184, 184);
     border: black1px solid;
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 2;
 }
